# anime-notifier

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  check.yaml  deploy.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: cert.yaml  config.yaml  deployment.yaml  secret.yaml  service.yaml
config/: example.yaml
src/: main.rs
src/api/: mod.rs
src/cfg/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/err/: mod.rs
src/scheduler/: error.rs  mod.rs  task.rs
